# car-evolution

./: CMakeLists.txt  DEVELOPMENT.md  PROPOSAL.md  README.md  addons.make  coordinates  final-project-hassang2.sln  final-project-hassang2.vcxproj  final-project-hassang2.vcxproj.filters  final_project.sln  final_project.vcxproj  notes.txt
NEAT/: car_ai_start_genome  experiments.cpp  experiments.h  genome.cpp  organism.cpp  organism.h  population.cpp  pos-neg  species.cpp  test.ne
NEAT.1.2.1/: experiments.cpp  experiments.h  gen_1  gen_10  gen_11  gen_12  gen_13  gen_14  gen_15  gen_16  gen_17  gen_18  gen_19  gen_2  gen_20  gen_21  gen_22  gen_23  gen_24  gen_25  gen_26  gen_27  gen_28  gen_29  gen_3  gen_30  gen_31  gen_32  gen_33  gen_34  gen_35  gen_36  gen_37  gen_38  gen_39  gen_4  gen_40  gen_41  gen_42  gen_43  (+33 more)
NEAT.1.2.1/originals/: experiments.txt  neatmain.txt
src/: car.cpp  car.h  main.cpp  ofApp.cpp  ofApp.h  sensor.h  track.cpp  track.h  world.cpp  world.h
tracks/: track0  track1  track2  track3  track4
